# AutonomiSim

./: .gitignore  .hgignore  README.md
mpc/src/: class_mpc_collision.py  class_mpc_line.py  dp.py  heading_pub.py  main_GAZEBO.py  mpc.py  mpccopy.py  service_mpc_collision.py  set_heading.py  supporting_variables_GAZEBO.py
usn_cmd_vel/: CMakeLists.txt  package.xml
usn_cmd_vel/src/: cmd_vel.py  cmd_vel2.py
usn_colreg/: CMakeLists.txt
usn_colreg/src/: LOS_colreg.py  los_colreg.py  moving_boats.py  mpc_colreg.py  plot_data.py
usn_drone/: CMakeLists.txt  manifest.xml
usn_drone/launch/: display.launch
usn_drone_description/: asd.txt  package.xml  urdf.rviz
usn_drone_gazebo/: CMakeLists.txt  package.xml
usn_drone_gazebo/config/: rviz_vrx.rviz
usn_drone_gazebo/launch/: localization.launch  move_base.launch  move_basic.launch  rviz_usn_drone.launch  spawn.launch  spawn_wamv.launch  usn_drone.launch
usn_drone_gazebo/urdf/: macros.xacro  usn_drone_gazebo.urdf  usn_drone_gazebo.urdf.xacro  usn_drone_gazebo.xacro
usn_drone_gazebo/urdf/components/: 3dcam.xacro  lidar.xacro  usn_drone_camera.xacro  usn_drone_imu.xacro  wamv_3d_lidar.xacro  wamv_camera.xacro  wamv_gps.xacro  wamv_imu.xacro
usn_drone_gazebo/urdf/dynamics/: usn_drone_gazebo_dynamics_plugin.xacro
usn_drone_gazebo/urdf/thruster_layout/: wamv_aft_thrusters.xacro  wamv_t_thrusters.xacro  wamv_x_thrusters.xacro
usn_drone_gazebo/urdf/thruster_layouts/: usn_drone_gazebo_thruster_config.xacro  usn_drone_t_thrusters.xacro  usn_drone_x_thrusters.xacro
usn_navigation/: CMakeLists.txt  package.xml
(+119 files in other folders)
