<?xml version="1.0"?>
<package format="2">
  <name>usn_drone_gazebo</name>
  <version>1.3.0</version>
  <description>
    usn_drone gazebo configuration with pluins
  </description>
  <maintainer email="caguero@osrfoundation.org">Carlos Aguero</maintainer>
  <maintainer email="jriveroo@osrfoundation.org">Jose Luis Rivero</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://wiki.ros.org/wamv_gazebo</url>
  <url type="bugtracker">http://github.com/osrf/vrx/issues</url>
  <author email="briansbingham@gmail.com">Brian Bingham</author>
  <author email="caguero@osrfoundation.org">Carlos Aguero</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_plugins</depend>
  <depend>hector_gazebo_plugins</depend>
  <depend>robot_localization</depend>
  <depend>usv_gazebo_plugins</depend>
  <depend>velodyne_gazebo_plugins</depend>
  <depend>wamv_description</depend>
  <depend>xacro</depend>
</package>
